--- a/apps/reactlit-docs/package.json
+++ b/apps/reactlit-docs/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "@astrojs/react": "^4.0.0",
     "@astrojs/starlight": "^0.29.2",
+    "@reactlit/core": "workspace:*",
+    "@reactlit/radix": "workspace:*",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "astro": "^4.16.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sharp": "^0.32.5"
+    "sharp": "^0.32.5",
+    "starlight-package-managers": "^0.8.0"
   }
 }
