--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -27,6 +27,7 @@
     "lint": "eslint src/**/*.ts* --fix"
   },
   "dependencies": {
+    "@mollycule/vigilante": "^1.0.2",
     "fast-deep-equal": "^3.1.3",
     "react-error-boundary": "^4.1.2"
   },
