--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   ],
   "scripts": {
     "dev": "turbo run dev --parallel --filter=reactlit-examples...",
+    "dev:docs": "turbo run dev --parallel --filter=reactlit-docs...",
     "build": "turbo run build",
     "test": "turbo run test",
     "clean": "turbo run clean",
