--- a/apps/reactlit-docs/package.json
+++ b/apps/reactlit-docs/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/react": "^4.0.0",
     "@astrojs/starlight": "^0.29.2",
+    "@radix-ui/themes": "^3.1.6",
     "@reactlit/core": "workspace:*",
     "@reactlit/radix": "workspace:*",
     "@types/react": "^18.3.12",
