--- a/apps/reactlit-examples/package.json
+++ b/apps/reactlit-examples/package.json
@@ -18,7 +18,8 @@
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "tailwind-merge": "^2.5.5"
+    "tailwind-merge": "^2.5.5",
+    "tunnel-rat": "^0.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
