--- a/apps/reactlit-docs/package.json
+++ b/apps/reactlit-docs/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "@astrojs/react": "^4.0.0",
     "@astrojs/starlight": "^0.29.2",
+    "@expressive-code/plugin-collapsible-sections": "^0.38.3",
+    "@expressive-code/plugin-line-numbers": "^0.38.3",
     "@radix-ui/themes": "^3.1.6",
     "@reactlit/core": "workspace:*",
     "@reactlit/radix": "workspace:*",
+    "@tanstack/react-query": "^5.62.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "astro": "^4.16.10",
