--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@mollycule/vigilante": "^1.0.2",
+    "@tanstack/react-query": "^5.62.3",
     "fast-deep-equal": "^3.1.3",
     "react-error-boundary": "^4.1.2"
   },
