--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,13 @@
 {
   "$schema": "https://turborepo.org/schema.json",
   "tasks": {
+    "prebuild": {
+      "cache": false
+    },
     "build": {
+      "dependsOn": [
+        "prebuild"
+      ],
       "outputs": [
         "dist/**",
         ".next/**",
