--- a/apps/reactlit-examples/package.json
+++ b/apps/reactlit-examples/package.json
@@ -17,8 +17,8 @@
     "clsx": "^2.1.1",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "tailwind-merge": "^2.5.5",
     "tunnel-rat": "^0.1.2"
   },
