--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,12 +23,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     permissions:
+      contents: read
       pages: write
       id-token: write
     environment:
       name: github-pages
-      url: ${{ steps.docs.outputs.page_url }}
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Deploy to GitHub Pages
-        id: docs
+        id: deployment
         uses: actions/deploy-pages@v4
