update publish root package script

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "turbo": "turbo",
     "add-changesets": "changeset add",
-    "publish-packages": "turbo run ci && changeset version && changeset publish"
+    "publish-packages": "pnpm run ci && changeset version && changeset publish"
   },
   "dependencies": {
     "@changesets/cli": "^2.27.10",
