--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -23,14 +23,15 @@
   "scripts": {
     "prebuild": "cp ../../README.md .",
     "build": "tsup && tsc",
-    "dev": "tsup --watch",
+    "dev": "tsup --dts --watch",
     "clean": "rm -rf dist",
     "lint": "eslint src/**/*.ts* --fix"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.62.3",
     "fast-deep-equal": "^3.1.3",
-    "react-error-boundary": "^4.1.2"
+    "react-error-boundary": "^4.1.2",
+    "tunnel-rat": "^0.1.2"
   },
   "devDependencies": {
     "@mollycule/vigilante": "^1.0.2",
