--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -48,7 +48,7 @@
     "typescript": "latest"
   },
   "peerDependencies": {
-    "react": "18",
-    "react-dom": "18"
+    "react": ">=17 <=19",
+    "react-dom": ">=17 <=19"
   }
 }
