--- a/libs/vanilla/package.json
+++ b/libs/vanilla/package.json
@@ -45,7 +45,7 @@
     "typescript": "latest"
   },
   "peerDependencies": {
-    "react": "18",
-    "react-dom": "18"
+    "react": ">=17 <=19",
+    "react-dom": ">=17 <=19"
   }
 }
