--- a/libs/radix/package.json
+++ b/libs/radix/package.json
@@ -28,11 +28,11 @@
     "lint": "eslint src/**/*.ts* --fix"
   },
   "dependencies": {
-    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.1.6",
     "@reactlit/core": "workspace:*",
     "clsx": "^2.1.1",
     "fuse.js": "^7.0.0",
+    "lucide-react": "^0.468.0",
     "tailwind-merge": "^2.5.5",
     "use-debounce": "^10.0.4"
   },
