fix issues with react 19 types

--- a/libs/vanilla/tsconfig.json
+++ b/libs/vanilla/tsconfig.json
@@ -9,6 +9,7 @@
     "allowSyntheticDefaultImports": true,
     "lib": ["ES2021", "DOM"],
     "moduleResolution": "bundler",
+    "skipLibCheck": true,
     "declaration": true,
     "emitDeclarationOnly": true
   },
