--- a/apps/reactlit-examples/package.json
+++ b/apps/reactlit-examples/package.json
@@ -18,8 +18,8 @@
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwind-merge": "^2.5.5",
     "tunnel-rat": "^0.1.2"
   },
