--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -24,7 +24,7 @@
     "prebuild": "cp ../../README.md .",
     "build": "tsup && tsc",
     "dev": "tsup --dts --watch",
-    "clean": "rm -rf dist",
+    "clean": "rm -rf node_modules && rm -rf .turbo && rm -rf dist",
     "lint": "eslint src/**/*.ts* --fix"
   },
   "dependencies": {
@@ -35,15 +35,15 @@
   },
   "devDependencies": {
     "@mollycule/vigilante": "^1.0.2",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "eslint": "^7.23.0",
     "eslint-config-next": "^12.0.8",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "7.28.0",
     "prettier": "^2.8.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tsup": "^8.3.5",
     "typescript": "latest"
   },
