--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,14 +23,12 @@ jobs:
           publish: pnpm run publish-packages
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload Docs
         uses: actions/upload-pages-artifact@v3
         id: docs
         with:
           path: apps/reactlit-docs/dist
-    permissions:
-      pages: write
-      id-token: write
   deploy-docs:
     runs-on: ubuntu-latest
     needs: build
