--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -7,6 +7,7 @@
   "repository": "github:mshafir/reactlit",
   "author": "Michael Shafir <michael.shafir@gmail.com>",
   "type": "module",
+  "main": "./dist/index.js",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
