--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -8,6 +8,7 @@
   "author": "Michael Shafir <michael.shafir@gmail.com>",
   "type": "module",
   "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -25,6 +26,7 @@
     "prebuild": "cp ../../README.md .",
     "build": "tsup && tsc",
     "dev": "tsup --dts --watch",
+    "test": "jest",
     "clean": "rm -rf node_modules && rm -rf .turbo && rm -rf dist",
     "lint": "eslint src/**/*.ts* --fix"
   },
@@ -36,17 +38,27 @@
   },
   "devDependencies": {
     "@mollycule/vigilante": "^1.0.2",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
     "eslint": "^7.23.0",
     "eslint-config-next": "^12.0.8",
+    "eslint-plugin-jest": "^28.9.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "7.28.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^2.8.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "tsup": "^8.3.5",
-    "typescript": "latest"
+    "typescript": "^5.7.2"
   },
   "peerDependencies": {
     "react": ">=17 <=19",
