--- a/libs/core/tsconfig.build.json
+++ b/libs/core/tsconfig.build.json
@@ -1,5 +1,5 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "./tsconfig.json",
-  "include": ["src", "test"]
+  "exclude": ["node_modules", "dist", "src/**/*.spec.tsx"]
 }
