--- a/libs/core/tsconfig.json
+++ b/libs/core/tsconfig.json
@@ -7,6 +7,7 @@
     "module": "ESNext",
     "target": "ES6",
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "lib": ["ES2021", "DOM"],
     "moduleResolution": "bundler",
     "declaration": true,
