--- a/libs/vanilla/tsconfig.json
+++ b/libs/vanilla/tsconfig.json
@@ -8,7 +8,7 @@
     "target": "ES6",
     "allowSyntheticDefaultImports": true,
     "lib": ["ES2021", "DOM"],
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "declaration": true,
     "emitDeclarationOnly": true
   },
