--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -34,7 +34,7 @@
     "@tanstack/react-query": "^5.62.3",
     "fast-deep-equal": "^3.1.3",
     "react-error-boundary": "^4.1.2",
-    "tunnel-rat": "^0.1.2"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@mollycule/vigilante": "^1.0.2",
