--- a/apps/reactlit-examples/package.json
+++ b/apps/reactlit-examples/package.json
@@ -6,7 +6,7 @@
 		"dev": "next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "biome check --write"
 	},
 	"dependencies": {
 		"@radix-ui/themes": "^3.1.6",
@@ -24,12 +24,10 @@
 		"tunnel-rat": "^0.1.2"
 	},
 	"devDependencies": {
-		"@eslint/eslintrc": "^3",
+		"@biomejs/biome": "1.9.4",
 		"@types/node": "^22.10.10",
 		"@types/react": "^19.0.1",
 		"@types/react-dom": "^19.0.2",
-		"eslint": "^9",
-		"eslint-config-next": "15.1.0",
 		"postcss": "^8",
 		"tailwindcss": "^3.4.1",
 		"typescript": "*"
